# hweekly

./: .gitignore  README.md  hweekly.cabal  stack.yaml
.hie/: Additional.hie  Main.hie
src/: Additional.hs  Main.hs
